<resources>
    <string name="app_name">Akihabara3</string>
    <string name="title_products">Productos</string>
    <string name="title_bgg">BGG</string>
    <string name="title_history">Historial</string>
    <string name="edit_product">Editar producto</string>
    <string name="new_product">Nuevo producto</string>

    <string name="drinks">Bebidas</string>
    <string name="foods">Comidas</string>
    <string name="added_balance">Saldo añadido</string>
    <string name="snackbar_undo_message">Has comprado %s por %s€</string>
    <string name="undo">Deshacer</string>
    <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="category">Categoría</string>
    <string name="current_balance">Balance actual</string>
    <string name="save">Guardar</string>
    <string name="attention">Atención</string>
    <string name="save_product_changes_message">¿Deseas guardar los cambios?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="delete">Eliminar</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="want_to_remove_transaction">¿Desea eliminar %s? No podrás deshacerlo</string>

    <string name="edit_balance">Modificar saldo</string>
    <string name="add_product">Añadir producto</string>
    <string name="set_valid_name">Introduce un nombre para el producto</string>
    <string name="set_valid_price">Introduce un precio para el producto</string>
    <string name="choose_category">Elige una categoría para el producto</string>
    <string name="confirm">Confirmar</string>
    <string name="ok">Ok</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="choose_image">Elige una imagen</string>

    <string name="info_about">Akihabara ha sido desarollada por Ulises Cervera. Su uso es libre y gratuito, y no ofrece ninguna garantía.</string>
    <string name="confirm_delete_product">¿Deseas eliminar %s?</string>
    <string name="delete_product_tip">Para confirmar arrastra el punto hasta el final</string>

    <string name="balance_title">Movimiento de saldo (%s)</string>

    <string name="recording_voice">Reconociendo voz...</string>

    <!-- Bgg Filters -->
    <string name="boardgames">Juego de mesa</string>
    <string name="boardgames_expansion">Expansiones</string>
    <string name="boardgames_accessory">Accesorios</string>
    <string name="videogames">Videojuegos</string>
    <string name="one_filter_on">Debe haber al menos 1 filtro activo</string>

    <string name="rank">Rank %d</string>
    <string name="the_hotness">The hotness</string>
    <string name="search">Buscar</string>

    <string name="close">Cerrar</string>
    <string name="retry">Reintentar</string>
    <string name="error_timeout">Ha ocurrido un error. La red o el servidor es demasiado lento</string>
    <string name="error_general">Ha ocurrido un error</string>

    <!-- Item detail -->
    <string name="rating">Rating: %.2f</string>
    <string name="geek_rating">Geek rating: %.2f</string>
    <string name="weight">Dificultad: %.2f</string>
    <string name="players">Jugadores: %d - %d</string>
    <string name="players_best">Jugadores: %d - %d (Mejor %s)</string>
    <string name="playing_time">%d minutos</string>
    <string name="playing_age">%d años</string>
    <string name="caterogies">Categorías</string>
    <string name="mechanics">Mecánicas</string>
    <string name="community_value">Comunidad: %s</string>
    <string name="language_dependency">Depedencia del idioma</string>
</resources>
