<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/destination_products">

    <!-- Global actions -->
    <action android:id="@+id/action_open_camera"
        app:destination="@+id/destination_take_photo"
        app:enterAnim="@anim/anim_slide_in"
        app:exitAnim="@anim/anim_exit"
        app:popEnterAnim="@anim/anim_enter"
        app:popExitAnim="@anim/anim_slide_out" />

    <action android:id="@+id/action_crop_image"
        app:destination="@+id/destination_crop_image"
        app:enterAnim="@anim/anim_slide_in"
        app:exitAnim="@anim/anim_exit"
        app:popEnterAnim="@anim/anim_enter"
        app:popExitAnim="@anim/anim_slide_out"/>

    <action
        android:id="@+id/action_create_product"
        app:destination="@+id/destination_create_product"
        app:enterAnim="@anim/anim_slide_in"
        app:exitAnim="@anim/anim_exit"
        app:popEnterAnim="@anim/anim_enter"
        app:popExitAnim="@anim/anim_slide_out"/>

    <action
        android:id="@+id/action_bgg"
        app:destination="@+id/destination_bgg"
        app:enterAnim="@anim/anim_slide_in"
        app:exitAnim="@anim/anim_exit"
        app:popEnterAnim="@anim/anim_enter"
        app:popExitAnim="@anim/anim_slide_out"/>

    <!-- Destinations -->
    <fragment
        android:id="@+id/destination_products"
        android:name="com.gmail.uli153.akihabara3.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products">

        <action
            android:id="@+id/action_edit_product"
            app:destination="@+id/destination_edit_product"
            app:enterAnim="@anim/anim_slide_in"
            app:exitAnim="@anim/anim_exit"
            app:popEnterAnim="@anim/anim_enter"
            app:popExitAnim="@anim/anim_slide_out">
            <argument
                android:name="product_id"
                app:argType="long" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/destination_bgg"
        android:name="com.gmail.uli153.akihabara3.ui.bgg.BggMainFragment"
        android:label="@string/title_bgg"
        tools:layout="@layout/fragment_bgg_main">

        <action
            android:id="@+id/action_bgg_detail"
            app:destination="@+id/destination_bgg_detail"
            app:enterAnim="@anim/anim_slide_in"
            app:exitAnim="@anim/anim_exit"
            app:popEnterAnim="@anim/anim_enter"
            app:popExitAnim="@anim/anim_slide_out"/>

    </fragment>

    <fragment
        android:id="@+id/destination_bgg_detail"
        android:name="com.gmail.uli153.akihabara3.ui.bgg.BggDetailFragment"
        android:label="@string/title_bgg"
        tools:layout="@layout/fragment_bgg_detail" />

    <fragment
        android:id="@+id/destination_history"
        android:name="com.gmail.uli153.akihabara3.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/destination_edit_product"
        android:name="com.gmail.uli153.akihabara3.ui.products.EditProductFragment"
        android:label="@string/edit_product"
        tools:layout="@layout/fragment_product_base_form">

        <argument
            android:name="product_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/destination_create_product"
        android:name="com.gmail.uli153.akihabara3.ui.products.CreateProductFragment"
        android:label="@string/new_product"
        tools:layout="@layout/fragment_product_base_form" />

    <fragment
        android:id="@+id/destination_take_photo"
        android:name="com.gmail.uli153.akihabara3.ui.camera.CameraFragment"
        android:label=""
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/destination_crop_image"
        android:name="com.gmail.uli153.akihabara3.ui.camera.CropFragment"
        android:label=""
        tools:layout="@layout/fragment_crop" />

</navigation>
