<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/bottom_nav_bar_height"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_horizontal_margin" />

        <ImageView
            android:id="@+id/imageview_product"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/stroke_main"
            android:orientation="vertical"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.like.LikeButton
            android:id="@+id/btn_favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clipToPadding="false"
            android:padding="12dp"
            app:anim_scale_factor="2"
            app:icon_size="24dp"
            app:icon_type="heart"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/imageview_product"
            app:layout_constraintTop_toTopOf="@+id/imageview_product" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/imageview_product" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/AkbEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="4dp"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/label_name" />

        <TextView
            android:id="@+id/label_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_price"
            style="@style/AkbEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="4dp"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/label_price" />

        <TextView
            android:id="@+id/label_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/edit_price" />

        <Spinner
            android:id="@+id/spinner_type"
            style="@style/AkbEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="4dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/label_type" />

        <com.gmail.uli153.akihabara3.ui.views.AkbBaseButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spinner_type"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>